--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
   <meta http-equiv='X-UA-Compatible' content='ie=edge'/>
   <title>Document</title>
-  <script src='js/index.js'></script>
+  <script src='js/index.js' defer></script>
   <link rel='stylesheet' href='index.css'/>
 </head>
 <body>
@@ -16,6 +16,13 @@
       <input id='search' type='text' name='search'>
       <input type='submit' name='submit'/>
     </form>
+    <p>Search By:</p>
+    <form id="search-param">
+      <input type="radio" id="username" name="param" value="Username" checked>
+      <label for="Username">Username</label><br>
+      <input type="radio" id="Repo" name="param" value="Repositories">
+      <label for="Repositories">Repositories</label><br>
+      </form>
 
     <div id='github-container'>
       <ul id='user-list'>
